Controller cliente